@@ -1420,6 +1420,9 @@ uint16_t CPU_Pop16(void);
 
 static bool cmos_reset_type_9_sarcastic_win31_comments=true;
 
+void CPU_SetResetSignal(int x);
+bool CPU_DynamicCoreCannotUseCPPExceptions(void);
+
 void On_Software_286_int15_block_move_return(unsigned char code) {
     uint16_t vec_seg,vec_off;
 
@@ -1463,8 +1466,10 @@ void On_Software_286_int15_block_move_return(unsigned char code) {
     CPU_IRET(false,0);
 
     /* force execution change (FIXME: Is there a better way to do this?) */
-    throw int(4);
-    /* does not return */
+    if (CPU_DynamicCoreCannotUseCPPExceptions())
+        CPU_SetResetSignal(4);
+    else
+        throw int(4);
 }
 
 void On_Software_286_reset_vector(unsigned char code) {
@@ -1509,8 +1514,10 @@ void On_Software_286_reset_vector(unsigned char code) {
     reg_eip = vec_off;
 
     /* force execution change (FIXME: Is there a better way to do this?) */
-    throw int(4);
-    /* does not return */
+    if (CPU_DynamicCoreCannotUseCPPExceptions())
+        CPU_SetResetSignal(4);
+    else
+        throw int(4);
 }
 
 void CPU_Exception_Level_Reset();
@@ -1588,7 +1595,10 @@ void On_Software_CPU_Reset() {
             LOG_MSG("PC-98 reset and continue: RETF to %04x:%04x",SegValue(cs),reg_ip);
 
             /* force execution change (FIXME: Is there a better way to do this?) */
-            throw int(4);
+            if (CPU_DynamicCoreCannotUseCPPExceptions())
+                CPU_SetResetSignal(4);
+            else
+                throw int(4);
             /* does not return */
         }
     }
@@ -1608,15 +1618,10 @@ void On_Software_CPU_Reset() {
         }
     }
 
-#if C_DYNAMIC_X86
-    /* this technique is NOT reliable when running the dynamic core! */
-    if (cpudecoder == &CPU_Core_Dyn_X86_Run || cpudecoder == &CPU_Core_Dynrec_Run) {
-        LOG_MSG("Warning: C++ exception method is not compatible with dynamic core when emulating reset");
-    }
-#endif
-
-    throw int(3);
-    /* does not return */
+    if (CPU_DynamicCoreCannotUseCPPExceptions())
+        CPU_SetResetSignal(3);
+    else
+        throw int(3);
 }
 
 bool allow_port_92_reset = true;
@@ -1796,15 +1801,19 @@ HostPt GetMemBase(void) { return MemBase; }
 /*! \brief          REDOS.COM utility command on drive Z: to trigger restart of the DOS kernel
  */
 class REDOS : public Program {
-public:
-    /*! \brief      Program entry point, when the command is run */
-    void Run(void) override {
-		if (cmd->FindExist("/?", false) || cmd->FindExist("-?", false)) {
-			WriteOut("Reboots the kernel of DOSBox-X's emulated DOS.\n\nRE-DOS\n");
-			return;
+	public:
+		/*! \brief      Program entry point, when the command is run */
+		void Run(void) override {
+			if (cmd->FindExist("/?", false) || cmd->FindExist("-?", false)) {
+				WriteOut("Reboots the kernel of DOSBox-X's emulated DOS.\n\nRE-DOS\n");
+				return;
+			}
+
+			if (CPU_DynamicCoreCannotUseCPPExceptions())
+				CPU_SetResetSignal(6);
+			else
+				throw int(6);
 		}
-        throw int(6);
-    }
 };
 
 void REDOS_ProgramStart(Program * * make) {
